# ginger-auth

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockefile  Dockerfile  README.md  metadata.toml  releaser.toml  services.toml
.github/workflows/: CI.yml  ci.yml
src/: info.rs  login.rs  login_helpers.rs  main.rs  register.rs  token_login.rs  workspace.rs
