[package]
description = "Auth cli for ginger"
edition = "2021"
name = "ginger-auth"
version = "0.1.0"

[dependencies]
clap = {version = "4.3.10", features = ["derive"]}
colored = {version = "2.0.1"}
inquire = {version = "0.6.2", features = ["date"]}
reqwest = {version = "0.12.5", features = ["json"]}
serde = {version = "1.0.166", features = ["derive"]}
serde_json = {version = "1.0.100"}
tokio = {version = "1", features = ["full"]}
toml = "0.8.14"

[package.metadata]
organization = "ginger-society"
